# mysylar

./: .gitignore  CMakeLists.txt
src/: config.cpp  config.h  log.cpp  log.h  singleton.h  util.h
tests/: configtest.cpp  logtest.cpp
